--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -15,12 +15,21 @@
 <body>
     <i>Fill out the form. Asterisk (*) means required.</i>
     <br><br>
-    <form th:action="@{/processForm}" th:object="customer" method="post">
+    <form th:action="@{/processForm}" th:object="${customer}" method="post">
         First name: <input type="text" th:field="*{firstName}" />
         <br><br>
         Last name (*): <input type="text" th:field="*{lastName}" />
         <!-- Add error message (if present) -->
         <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="error"></span>
+        <br><br>
+        Free passes: <input type="text" th:field="*{freePasses}" />
+        <!--        Add error message (if present)-->
+        <span th:if="${#fields.hasErrors('freePasses')}" th:errors="*{freePasses}" class="error"></span>
+        <br><br>
+        Postal Code: <input type="text" th:field="*{postalCode}" />
+        <!--        Add error message (if present)-->
+        <span th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}" class="error"></span>
+        <br><br>
         <input type="submit" value="Submit">
     </form>
 </body>
