--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-conformation.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-conformation.html
@@ -11,6 +11,8 @@
 The Customer is confirmed: <span th:text="${customer.firstName + ' '+ customer.lastName}"/>
 <br><br>
 Free passes: <span th:text="${customer.freePasses}"></span>
+<br><br>
+Postal code: <span th:text="${customer.postalCode}"></span>
 </body>
 
 </html>
