--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-conformation.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-conformation.html
@@ -12,7 +12,8 @@ The Customer is confirmed: <span th:text="${customer.firstName + ' '+ customer.l
 <br><br>
 Free passes: <span th:text="${customer.freePasses}"></span>
 <br><br>
-Postal code: <span th:text="${customer.postalCode}"></span>
+Postal code: <span th:text="${customer.postalCode}"></span><br><br>
+Course code: <span th:text="${customer.courseCode}"></span>
 </body>
 
 </html>
