--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -28,6 +28,11 @@
         <br><br>
         Postal Code: <input type="text" th:field="*{postalCode}" />
         <!--        Add error message (if present)-->
+        <br><br>
+        Course Code: <input type="text" th:field="*{courseCode}" />
+        <!--        Add error message (if present)-->
+        <span th:if="${#fields.hasErrors('courseCode')}" th:errors="*{courseCode}" class="error"></span>
+        <br><br>
 
         <input type="submit" value="Submit">
     </form>
