--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -16,17 +16,33 @@
 <!--    Add a button-->
     <a th:href="@{/employees/showFormForAdd}"
     class="btn btn-primary btn-sm mb-3">Add Employee</a>
+
     <table class="table table-bordered table-striped">
+
         <thead class="table-dark">
-        <tr><th>First Name</th><th>Last Name</th><th>Email</th></tr>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Action</th>
+        </tr>
         </thead>
+
         <tbody>
-        <tr th:each="tempEmloyee : ${employees}">
-            <td th:text="${tempEmloyee.firstName}"/>
-            <td th:text="${tempEmloyee.lastName}"/>
-            <td th:text="${tempEmloyee.email}"/>
+        <tr th:each="tempEmployee : ${employees}">
+            <td th:text="${tempEmployee.firstName}"/>
+            <td th:text="${tempEmployee.lastName}"/>
+            <td th:text="${tempEmployee.email}"/>
+<!--     Add update button Link       -->
+            <td>
+                <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                class="btn btn-info btn-sm">
+                    Update
+                </a>
+            </td>
         </tr>
         </tbody>
+
     </table>
 </div>
 
